--- a/src/App.css
+++ b/src/App.css
@@ -7,9 +7,9 @@
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
-.bg-sky {
-  background: #EDF6FF;
-min-height: 100vh;
+.bg-blue {
+  background: #0079BF;
+  min-height: 100vh;
 }
 .item-status {
   padding: 0.2em;
@@ -91,11 +91,11 @@ min-height: 100vh;
   padding: 0.5em 1.5em;
   margin-left: 1rem;
 }
-.parents-card {
+.card.parents-card {
   height: 85vh;
   width: 100%;
   box-shadow: 0px 3px 6px #557DA526;
-
+  background: #EBECF0;
 }
 .close-icon {
   color: #303F60;
@@ -108,16 +108,154 @@ min-height: 100vh;
   border-bottom: 1px solid #303F60;
 }
 .card-header.list {
-  background: #1963af;
-  color: #fff;
+  color: #52617A;
   font-weight: 600;
   font-size: 1.15rem;
 }
 .card-header.list .close-icon {
+  color: #52617A;
+}
+.search-box {
+  border: 1px solid black;
+  max-height: 8vh;
+  overflow-y: auto;
+  padding: 1em;
+}
+.bg-dark-blue {
+  background: #0067A3;
   color: #fff;
+}
+.auth-btns {
+  margin-left: auto;
+}
+.brand-logo {
+  margin-left: auto;
+  color: #fff;
+}
+.common-btn {
+  padding: 0.3em 1em;
+  border-radius: 4px;
+  margin-right: 0.4rem;
+  cursor: pointer;
+  text-align: center;
+  font-weight: bold;
+  color: #fff;
+  border: 1px solid transparent;
+  box-shadow: none;
+}
+.signup {
+  background: linear-gradient(to bottom, #61BD4F 0%, #5AAC44 100%);
+}
+.login {
+  background: linear-gradient(to bottom, rgba(255, 255, 255, 0.3), rgba(255, 255, 255, 0.2));
+}
+.signup:hover {
+  background: linear-gradient(to bottom, #5AAC44 0%, #519839 100%);
+}
+.login:hover {
+  background: linear-gradient(to bottom, rgba(255, 255, 255, 0.2), rgba(255, 255, 255, 0.1));
+}
+.navbar-light .navbar-nav .nav-link.header-items {
+  color: #fff;
+  border-radius: 3px;
+  font-weight: bold;
+  margin-left: 0.5rem;
+}
+.navbar-light .navbar-nav .nav-link.header-items:hover {
+  background-color: rgba(255, 255, 255, 0.2);
+  color: #FFFFFF;
+}
+.navbar-light .navbar-brand.brand {
+  color: #fff;
+  font-size: 1.5rem;
+  font-weight: 500;
+  opacity: 0.5;
+}
+.navbar-light .navbar-brand.brand:hover {
+  opacity: 0.7;
+  color: #fff;
+}
+.banner-header {
+  width: 100%;
+  background: #FAF3C0;
+}
+.banner {
+  color: #172b4d;
+  font-weight: 700;
+}.banner .common-btn {
+  padding-left: 0.5em;
+}
+.banner .banner-btn {
+  background: #0079bf;
+}
+.banner .banner-btn:hover {
+  background: #026aa7;
+}
+.board-title {
+  color: #fff;
+  font-size: 1.2rem;
+  font-weight: 700;
+  display: inline-block;
+  margin-right: 1rem;
+}
+.board-divider {
+  border-right: 1px solid #ffffff3d;
+}
+.signup.board-btn{
+  background: #ffffff3d;
+  margin-left: 0.5rem;
+  font-weight: normal;
+}    
+.board-btns.menu-items {
+  float: right;
+}
+.board-profile {
+  display: inline-block;
+  margin-left: 0.5rem;
+  height: 28px;
+  line-height: 28px;
+  width: 28px;
+  border-radius: 50%;
+  background-color: #dfe1e6;
+  color: #172b4d;
+  cursor: pointer;
+  font-size: 0.8rem;
+  text-align: center;
+  position: relative;
+  font-weight: 500;
+}
+.board-profile:hover {
+  background-color: #c1c7d0;
+}
+.profile-icon {
+  position: absolute;
+  top: 10px;
+  right: 2px;
+  font-size: 0.7rem;
+  color: #05476d;
+}
+.signup.board-btn:hover {
+  background-color: #ffffff52;
+}
+.add-list-btn {
+  display: inline-block;
+}
+.task-card:hover {
+  background: #e7e7e7;
 }
 @media screen and (max-width: 767px) {
   .mt-1rem {
     margin-top: 1rem;
   }
+  .brand-logo {
+    margin-left: 0.2rem;
+  }
+  .menu-items {
+    margin-top: 0.5rem;
+  }
+  .add-list-btn {
+    margin-top: 1rem;
+  }
+ 
+ 
 }
