--- a/src/App.css
+++ b/src/App.css
@@ -160,6 +160,7 @@
   border-radius: 3px;
   font-weight: bold;
   margin-left: 0.5rem;
+  display: inline-block;
 }
 .navbar-light .navbar-nav .nav-link.header-items:hover {
   background-color: rgba(255, 255, 255, 0.2);
