--- a/src/App.css
+++ b/src/App.css
@@ -92,7 +92,7 @@
   margin-left: 1rem;
 }
 .card.parents-card {
-  height: 85vh;
+  height: 100%;
   width: 100%;
   box-shadow: 0px 3px 6px #557DA526;
   background: #EBECF0;
@@ -209,6 +209,68 @@
 }    
 .board-btns.menu-items {
   float: right;
+}
+.board-header {
+  position: relative;
+}
+.is-side-nav-menu .board-content {
+  margin-right: 155px;
+}
+.side-nav {
+  width: 0;
+  z-index: 5;
+  overflow-x: hidden;
+  height: 87vh;
+  position: absolute;
+  background: #f4f5f7;
+  top: 0;
+  bottom: 0;
+  right: 0;
+  transition-duration: 2s;
+  transition-property: width;
+  transition-timing-function: ease-in;
+}
+.side-nav .menu {
+  text-align: center;
+  font-size: 1rem;
+  font-weight: 500;
+  transition: margin .12s ease-in;
+  position: sticky;
+  top: 0px;
+  padding: 1rem;
+  border-bottom: 2px solid #f4f5f7;
+  z-index: 100;
+  background: #f4f5f7;
+
+}
+.profile-name {
+  font-weight: 500;
+}
+.profile-date {
+  font-size: 0.8rem;
+}
+.w-300 {
+  width: 320px;
+}
+.side-nav .menu-items {
+  cursor: pointer;
+  padding: 0 0.8em;
+  border-radius: 4px;
+}
+.side-nav .close-icon {
+  float: right;
+  cursor: pointer;
+}
+.side-nav .menu-items:hover {
+  background-color: #091e4214;
+}
+.side-nav .board-menu-divider {
+  background-color: #091e4221;
+  border: 0;
+  height: 2px;
+  margin: 1rem;
+  padding: 0;
+  width: 100%;
 }
 .board-profile {
   display: inline-block;
